15 February 2007: Wouter
	- port to FreeBSD 4.11 Dec Alpha. Also works on Solaris 10 sparc64,
	  Solaris 9, FreeBSD 6, Linux i386 and OSX powerpc.
	- malloc rndstate, so that it is aligned for access.
	- fixed rbtree cleanup with postorder traverse.
	- fixed pending messages are deleted when handled.

14 February 2007: Wouter
	- Included configure.ac changes from ldns.
	- detect (some) headers before the standards check.
	- do not use isblank to test c99, since its not available on solaris9.
	- review of testcode.
		* entries in a RANGE are no longer reversed.
		* print name of file with replay entry parse errors.
	- port to OSX: cast to int for some prints of sizet.
	- Makefile copies ldnstestpkts.c before doing dependencies on it.

13 February 2007: Wouter
	- work on fake events, first fwd replay works.
	- events can do timeouts and errors on queries to servers.
	- test package that runs replay scenarios.

12 February 2007: Wouter
	- work on fake events.

9 February 2007: Wouter
	- replay file reading.
	- fake event setup, it creates fake structures, and teardowns,
	  added signal callbacks to reply to be able to fake those,
	  and main structure of event replay routines.

8 February 2007: Wouter
	- added tcp test.
	- replay storage.
	- testcode/fake_event work.

7 February 2007: Wouter
	- return answer with the same ID as query was sent with.
	- created udp forwarder test. I've done some effort to make it perform
	  quickly. After servers are created, no big sleep statements but
	  it checks the logfiles to see if servers have come up. Takes 0.14s.
	- set addrlen value when calling recvfrom.
	- comparison of addrs more portable.
	- LIBEVENT option for testbed to set libevent directory.
	- work on tcp input.

6 February 2007: Wouter
	- reviewed code and improved in places.

5 February 2007: Wouter
	- Picked up stdc99 and other define tests from ldns. Improved
	  POSIX define test to include getaddrinfo.
	- defined constants for netevent callback error code.